--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -6,7 +6,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.dashboard-container {
+.container {
     display: flex;
     height: 100vh;
     /* Mengisi seluruh tinggi viewport */
