--- a/src/Pages/Employees/Employees.css
+++ b/src/Pages/Employees/Employees.css
@@ -39,4 +39,39 @@
     border-bottom-right-radius: 8px;
 }
 
+.action {
+    display: flex;
+    gap: 10px;
+}
 
+.btn {
+    width: 125px;
+    background-color: #141414;
+    border: 2px solid #28282a;
+    color: #fff;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 8px;
+    transition: ease 0.2s;
+
+}
+.btn:hover {
+    background-color: #28282A;
+    color: #fff;
+
+}
+.warning-btn {
+    width: 125px;
+    background-color: #141414;
+    border: 2px solid #28282a;
+    color: #ff0000;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 8px;
+    transition: ease 0.2s;
+
+}
+.warning-btn:hover {
+    background-color: #ff0000;
+    color: #fff;
+}
