--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     color: #fff;
     padding: 0;
-    background-color: #1E1E1E;
+    background-color: #09090B;
     font-family: Arial, sans-serif;
 }
 
@@ -20,8 +20,11 @@ body {
 .header {
     display: flex;
     flex-direction: row;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     justify-content: space-between;
+}
+.header-left p {
+    margin-bottom: 25px;
 }
 
 .content {
@@ -30,7 +33,7 @@ body {
     padding: 40px;
     width: calc(100% - 250px);
     /* Mengisi sisa ruang */
-    background-color: #141414;
+    background-color: #09090B;
     /* Warna latar belakang konten */
     height: 100vh;
     /* Tinggi konten penuh */
