--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -5,9 +5,9 @@
 }
 
 :root{
-    --sidebar-color: #141414;
-    --primary-color: #3a3b3c;
-    --primary-color-light: #3a3b3c;
+    --sidebar-color: #09090B;
+    --primary-color: #27272A;
+    --primary-color-light: #27272A;
     --toggle-color: #fff;
     --text-color: #ccc;
 
@@ -34,7 +34,7 @@
     background: var(--sidebar-color);
     transition: var(--tran-05);
     z-index: 100;  
-    border-right: 2px solid #2B2B2B;
+    border-right: 1px solid #27272A;
 }
 
 .sidebar li{
