--- a/src/Pages/Employees/Employees.css
+++ b/src/Pages/Employees/Employees.css
@@ -2,14 +2,18 @@
     width: 100%;
 }
 
+
 .list-employees table {
     width: 100%;
     border-collapse: collapse;
+    /* border: 1px solid #27272A; */
+    overflow: hidden;
 }
+
 
 .list-employees thead th,
 .list-employees tbody td {
-    border: 1px solid #28282a;
+    border-bottom: 1px solid #27272A;
     padding: 12px;
     text-align: left;
     vertical-align: middle;
@@ -19,25 +23,6 @@
     color: #fff;
 }
 
-.list-employees tbody tr:last-child td {
-    border-bottom: 1px solid #28282a;
-}
-
-.list-employees thead tr:first-child th:first-child {
-    border-top-left-radius: 8px;
-}
-
-.list-employees thead tr:first-child th:last-child {
-    border-top-right-radius: 8px;
-}
-
-.list-employees tbody tr:last-child td:first-child {
-    border-bottom-left-radius: 8px;
-}
-
-.list-employees tbody tr:last-child td:last-child {
-    border-bottom-right-radius: 8px;
-}
 
 .action {
 }
