--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
 
 .btn {
     width: fit-content;
-    background-color: #141414;
+    background-color: #09090b;
     border: 2px solid #28282a;
     color: #fff;
     padding: 10px 25px 10px 25px;
@@ -77,7 +77,7 @@ body {
 /* } */
 .warning-btn {
     width: fit-content;
-    background-color: #141414;
+    background-color: #09090b;
     border: 2px solid #28282a;
     color: #ff0000;
     padding: 10px 25px 10px 25px;
@@ -95,4 +95,83 @@ body {
     font-size: 20px;
     padding-right: 10px;
     align-self: center;
+}
+
+
+
+
+
+
+
+.cursor {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 50%;
+    position: absolute;
+    transition-duration: 200ms;
+    transition-timing-function: ease-out;
+    animation: cursorAnim .5s infinite alternate;
+    pointer-events: none;
+}
+
+.cursor::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border: 8px solid gray;
+    border-radius: 50%;
+    opacity: .5;
+    top: -8px;
+    left: -8px;
+    animation: cursorAnim2 .5s infinite alternate;
+}
+
+@keyframes cursorAnim {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(.7);
+    }
+}
+
+@keyframes cursorAnim2 {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(.4);
+    }
+}
+
+@keyframes cursorAnim3 {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(3);
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+
+.expand {
+    animation: cursorAnim3 .5s forwards;
+    border: 1px solid red;
+}
+
+p {
+  color: white;
+  font-family: 'arial';
+  text-align: center;
+  margin-top: 50px;
+  font-size: 1.4em;
+  
+  a {
+    color: teal;
+  }
 }
