--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,6 +1,6 @@
-.header {
-    animation: slideInFromTop 0.7s cubic-bezier(0, .54, .58, 1);
-}
+/* .header { */
+/*     animation: slideInFromTop 0.7s cubic-bezier(0, .54, .58, 1); */
+/* } */
 .table-container {
     animation: opacity 1s ;
 }
