--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #09090b;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
