--- a/src/Components/FormAddEmployee.css
+++ b/src/Components/FormAddEmployee.css
@@ -1,47 +1,36 @@
-.floating-form-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+.dialog-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Pastikan ini ada untuk vertikal center */
+    z-index: 1000; /* Pastikan overlay di atas konten lainnya */
 }
 
-.floating-form-container.open {
-  visibility: visible;
-  opacity: 1;
+.dialog {
+    background-color: #272727;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+    transform: scale(0); /* Awalnya kecil */
+    opacity: 0; /* Awalnya tidak terlihat */
+    transition: transform 0.2s ease, opacity 0.2s ease; /* Efek transisi */
 }
 
-.floating-form {
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 400px;
+.dialog-enter {
+    transform: scale(1); /* Skala normal saat muncul */
+    opacity: 1; /* Menjadi terlihat */
 }
 
-.close-button {
-  background: none;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
 
-.form-group {
-  margin-bottom: 15px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
+.dialog-exit {
+    transform: scale(0); /* Kecil saat keluar */
+    opacity: 0; /* Tidak terlihat saat keluar */
 }
 
