--- a/src/Components/FormAddEmployee.css
+++ b/src/Components/FormAddEmployee.css
@@ -7,8 +7,8 @@
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
-    align-items: center; /* Pastikan ini ada untuk vertikal center */
-    z-index: 1000; /* Pastikan overlay di atas konten lainnya */
+    align-items: center; 
+    z-index: 1000; 
 }
 
 .dialog {
@@ -18,19 +18,19 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     width: 100%;
-    transform: scale(0); /* Awalnya kecil */
-    opacity: 0; /* Awalnya tidak terlihat */
-    transition: transform 0.2s ease, opacity 0.2s ease; /* Efek transisi */
+    transform: scale(0);
+    opacity: 0; 
+    transition: transform 0.2s ease, opacity 0.2s ease; 
 }
 
 .dialog-enter {
-    transform: scale(1); /* Skala normal saat muncul */
-    opacity: 1; /* Menjadi terlihat */
+    transform: scale(1);
+    opacity: 1; 
 }
 
 
 .dialog-exit {
-    transform: scale(0); /* Kecil saat keluar */
-    opacity: 0; /* Tidak terlihat saat keluar */
+    transform: scale(0);
+    opacity: 0; 
 }
 
