--- a/src/Components/FormAddEmployee.css
+++ b/src/Components/FormAddEmployee.css
@@ -5,10 +5,12 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px); 
     display: flex;
     justify-content: center;
-    align-items: center; 
-    z-index: 1000; 
+    align-items: center;
+    z-index: 1000;
+    opacity: 0; 
 }
 
 .dialog {
@@ -18,19 +20,8 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     width: 100%;
-    transform: scale(0);
+    transform: scale(0); 
     opacity: 0; 
-    transition: transform 0.2s ease, opacity 0.2s ease; 
-}
-
-.dialog-enter {
-    transform: scale(1);
-    opacity: 1; 
-}
-
-
-.dialog-exit {
-    transform: scale(0);
-    opacity: 0; 
+    transition: none; 
 }
 
