--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,62 +1,3 @@
-.table-container {
-    animation: opacity 1s ;
-}
-.card-left {
-    animation: slideInFromLeft 1s cubic-bezier(0, .54, .58, 1);
-}
-
-.card-right {
-    animation: slideInFromRight 1s cubic-bezier(0, .54, .58, 1);
-}
-@keyframes slideInFromTop {
-    0% {
-        transform: translateY(-100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes opacity {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes slideInFromRight {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes slideInFromLeft {
-    0% {
-        transform: translateX(-100%);
-        opacity: 0;
-        /* Memperbaiki opacity awal */
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-
-
 .switches-container {
     width: 16rem;
     position: relative;
@@ -139,6 +80,7 @@
     height: 200px;
     gap: 25px;
     margin-bottom: 25px;
+    overflow: hidden;
 }
 
 .card-left {
@@ -152,10 +94,15 @@
     background: #09090b;
     gap: 15px;
     justify-content: center;
-    transition: ease 0.4s;
+    /* transition: ease 0.4s; */
+    transform: translateX(-110%);
+    opacity: 0;
+
 }
+
 .card-left:hover {
     background: #27272A;
+    transition: background 0.8s;
 }
 
 .card-title {
@@ -182,6 +129,7 @@
 }
 
 .card-right {
+    opacity: 0;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -191,10 +139,13 @@
     padding: 25px;
     gap: 15px;
     justify-content: center;
-    transition: ease 0.4s;
+    /* transition: ease 0.4s; */
+    transform: translateX(110%);
 }
+
 .card-right:hover {
     background: #27272A;
+    transition: background 0.8s;
 }
 
 .main-container {
