add module checker

--- a/src/Components/FormAddEmployee.scss
+++ b/src/Components/FormAddEmployee.scss
@@ -51,5 +51,10 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    gap: 15px;
+  }
+  .btn, .warning-btn {
+    width: 50%;
+    margin: 0;
   }
 }
