add overlay blank if not desktop,tab, ipad width ratio

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
         filter: blur(0);
     }
 }
+@keyframes fade-out {
+    from {
+        opacity: 1;
+        filter: blur(0);
+    }
+    to {
+        opacity: 0;
+        filter: blur(10px);
+    }
+}
 
 body {
     margin: 0;
