--- a/src/Components/BlankPage.scss
+++ b/src/Components/BlankPage.scss
@@ -1,23 +1,43 @@
-
 .blank-page {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5); 
-    backdrop-filter: blur(5px); 
-    opacity: 0; 
-    transition: opacity 0.5s; 
-    z-index: 9999; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  transition: opacity 0.5s;
+  z-index: 9999;
+  pointer-events: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .blank-page.active {
-    opacity: 1; 
-    animation: fade-in 0.5s forwards;
+  opacity: 1;
+  animation: fade-in 0.5s forwards;
 }
 
 .blank-page:not(.active) {
-    animation: fade-out 0.5s forwards; 
+  animation: fade-out 0.5s forwards;
 }
 
+.blank-gear {
+  font-size: 20px;
+  animation: spin 2s linear infinite;
+  margin: 0;
+  padding: 0;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
