--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body.dark-theme {
+  filter: invert(1) hue-rotate(180deg) !important; 
+}
+
 :root {
     --primary-bg-color: #09090B;
     --secondary-bg-color: #28282A;
