--- a/src/Components/FormTemplate.scss
+++ b/src/Components/FormTemplate.scss
@@ -19,7 +19,7 @@
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 800px;
+  max-width: 600px;
   width: 100%;
   transform: scale(1);
   opacity: 1;
@@ -27,21 +27,6 @@
 }
 
 .add-employee {
-  .form-container {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    gap: 20px;
-  }
-
-  .form-left {
-    width: 50%;
-  }
-
-  .form-right {
-    width: 50%;
-  }
-
   .form-group {
     margin-bottom: 15px;
 
@@ -68,9 +53,7 @@
     margin-top: 20px;
     gap: 15px;
   }
-
-  .btn,
-  .warning-btn {
+  .btn, .warning-btn {
     width: 50%;
     margin: 0;
   }
