--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -1,273 +1,271 @@
 .switches-container {
-    width: 16rem;
-    position: relative;
-    display: flex;
-    padding: 0;
-    position: relative;
-    background: #27272A;
-    line-height: 2rem;
-    border-radius: 8px;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
+  width: 16rem;
+  position: relative;
+  display: flex;
+  padding: 0;
+  position: relative;
+  background: #27272A;
+  line-height: 2rem;
+  border-radius: 4px;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
 }
 
 /* input (radio) for toggling. hidden - use labels for clicking on */
 .switches-container input {
-    visibility: hidden;
-    position: absolute;
-    top: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
 }
 
 /* labels for the input (radio) boxes - something to click on */
 .switches-container label {
-    width: 50%;
-    padding: 0;
-    margin: 0;
-    text-align: center;
-    cursor: pointer;
-    color: var(--switches-label-color);
+  width: 50%;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  cursor: pointer;
+  color: var(--switches-label-color);
 }
 
 .switch-wrapper {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 50%;
-    padding: 0.15rem;
-    z-index: 3;
-    transition: transform .5s cubic-bezier(.77, 0, .175, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  padding: 0.15rem;
+  z-index: 3;
+  transition: transform .5s cubic-bezier(.77, 0, .175, 1);
 }
 
 .switch {
-    border-radius: 8px;
-    height: 100%;
-    background: #09090b;
+  border-radius: 4px;
+  height: 100%;
+  background: #09090b;
 }
 
 .switch div {
-    width: 100%;
-    text-align: center;
-    opacity: 0;
-    display: block;
-    color: var(--switch-text-color);
-    transition: opacity .2s cubic-bezier(.77, 0, .175, 1) .125s;
-    will-change: opacity;
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  display: block;
+  color: var(--switch-text-color);
+  transition: opacity .2s cubic-bezier(.77, 0, .175, 1) .125s;
+  will-change: opacity;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .switches-container input:nth-of-type(1):checked~.switch-wrapper {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 .switches-container input:nth-of-type(2):checked~.switch-wrapper {
-    transform: translateX(100%);
+  transform: translateX(100%);
 }
 
 .switches-container input:nth-of-type(1):checked~.switch-wrapper .switch div:nth-of-type(1) {
-    opacity: 1;
+  opacity: 1;
 }
 
 .switches-container input:nth-of-type(2):checked~.switch-wrapper .switch div:nth-of-type(2) {
-    opacity: 1;
+  opacity: 1;
 }
 
 
 .card-container {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    gap: 25px;
-    margin-bottom: 25px;
-    overflow: hidden;
+  display: flex;
+  width: 100%;
+  height: 200px;
+  gap: 25px;
+  margin-bottom: 25px;
+  overflow: hidden;
 }
 
 .card-left {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #27272A;
-    border-radius: 8px;
-    padding: 25px;
-    background: #09090b;
-    gap: 15px;
-    justify-content: center;
-    transform: translateX(-110%);
-    opacity: 0;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #27272A;
+  border-radius: 4px;
+  padding: 25px;
+  background: #09090b;
+  gap: 15px;
+  justify-content: center;
+  transform: translateX(-110%);
+  opacity: 0;
 
 }
 
 .card-left:hover {
-    background: #27272A;
-    transition: background 0.8s;
+  background: #27272A;
+  transition: background 0.8s;
 }
 
 .card-title {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    color: var(text-color-gray);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  color: var(text-color-gray);
 }
 
 .card-value {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-size: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 50px;
 }
 
 .card-description {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    color: var(--text-color-gray);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  color: var(--text-color-gray);
 }
 
 .card-right {
-    opacity: 0;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    background-color: #09090b;
-    border-radius: 8px;
-    border: 1px solid #27272A;
-    padding: 25px;
-    gap: 15px;
-    justify-content: center;
-    /* transition: ease 0.4s; */
-    transform: translateX(110%);
+  opacity: 0;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  background-color: #09090b;
+  border-radius: 4px;
+  border: 1px solid #27272A;
+  padding: 25px;
+  gap: 15px;
+  justify-content: center;
+  /* transition: ease 0.4s; */
+  transform: translateX(110%);
 }
 
 .card-right:hover {
-    background: #27272A;
-    transition: background 0.8s;
+  background: #27272A;
+  transition: background 0.8s;
 }
 
 .main-container {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    gap: 25px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  gap: 25px;
 }
 
 .main-left {
-    display: flex;
-    width: 60%;
-    flex-direction: column;
+  display: flex;
+  width: 60%;
+  flex-direction: column;
 }
 
 .title-csv {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* padding: 25px; */
-    gap: 15px;
-    font-size: 20px;
-    margin-bottom: 25px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 25px; */
+  gap: 15px;
+  font-size: 20px;
+  margin-bottom: 25px;
 }
 
 .btn-CSV {
-    background-color: #09090B;
-    border: 1px solid #27272A;
-    color: #fff;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 8px;
+  background-color: #09090B;
+  border: 1px solid #27272A;
+  color: #fff;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
 }
 
 
 
 
 .list-shift table {
-    width: 100%;
-    border-collapse: collapse;
-    /* border: 1px solid #27272A; */
-    overflow: hidden;
+  width: 100%;
+  border-collapse: collapse;
+  overflow: hidden;
 }
 
 .table-container {
-    /* max-height: 690px; */
-    /* box-sizing: border-box; */
-    border-radius: 8px;
-    border: 1px solid #27272A;
-    /* overflow-y: auto; */
+  border-radius: 4px;
+  border: 1px solid #27272A;
+  // height: 77vh;
+   // overflow-y: auto;
 }
 
 .list-shift thead th,
 .list-shift tbody td {
-    border-bottom: 1px solid #27272A;
-    padding: 12px;
-    text-align: left;
-    vertical-align: middle;
+  border-bottom: 1px solid #27272A;
+  padding: 12px;
+  text-align: left;
+  vertical-align: middle;
 }
 
 .list-shift thead th {
-    color: #fff;
+  color: #fff;
 }
 
 
 .role-chip {
-    display: inline-block;
-    background-color: #28282a;
-    color: #fff;
-    padding: 4px 8px;
-    border-radius: 8px;
-    font-size: 14px;
-    text-align: center;
+  display: inline-block;
+  background-color: #28282a;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 14px;
+  text-align: center;
 }
 
 .list-shift th.name-col,
 .list-shift td.name-col {
-    width: 25%;
+  width: 25%;
 }
 
 .list-shift th.presence-col,
 .list-shift td.presence-col {
-    width: 20%;
+  width: 20%;
 }
 
 .list-shift th.role-col,
 .list-shift td.role-col {
-    width: 5%;
+  width: 5%;
 }
 
 .list-shift th.shift-col,
 .list-shift td.shift-col {
-    width: 30%;
+  width: 30%;
 }
 
 .phone-number {
-    font-size: 12px;
-    color: #666;
-    margin-top: 4px;
+  font-size: 12px;
+  color: #666;
+  margin-top: 4px;
 }
 
 .presence-time {
-    font-size: 12px;
-    color: #666;
-    margin-top: 4px;
+  font-size: 12px;
+  color: #666;
+  margin-top: 4px;
 }
 
 .shift-time {
-    font-size: 12px;
-    color: #666;
-    margin-top: 4px;
+  font-size: 12px;
+  color: #666;
+  margin-top: 4px;
 }
 
 .presence-col.presence {
-    color: #5E5AAB;
+  color: #5E5AAB;
 }
 
 .presence-col.no-presence {
-    color: #FF0000;
+  color: #FF0000;
 }
 
 
 .main-right {
-    display: flex;
-    width: 40%;
+  display: flex;
+  width: 40%;
 }
