--- a/src/Pages/Employees/Employees.scss
+++ b/src/Pages/Employees/Employees.scss
@@ -1,24 +1,56 @@
-
 .main {
-    width: 100%;
+  width: 100%;
 }
 
 .list-employees table {
-    width: 100%;
-    border-collapse: collapse;
-    overflow: hidden;
+  width: 100%;
+  border-collapse: collapse;
+  overflow: hidden;
 }
 
 .list-employees thead th,
 .list-employees tbody td {
-    border-bottom: 1px solid var(--border-color);
-    padding: 12px;
-    text-align: left;
-    vertical-align: middle;
+  border-bottom: 1px solid var(--border-color);
+  padding: 12px;
+  text-align: left;
+  vertical-align: middle;
 }
 
 .list-employees thead th {
-    color: var(--text-color);
+  color: var(--text-color);
 }
 
 
+.toolbar {
+  width: 60%;
+  display: flex;
+  gap: 25px;
+  margin-bottom: 25px;
+
+  .search-bar {
+    width: 50%;
+    gap: 25px;
+    display: flex;
+  }
+
+  .filter {
+    gap: 25px;
+    display: flex;
+    width: 50%;
+  }
+
+  select {
+    background: var(--primary-bg-color);
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+    color: var(--text-color);
+    padding: var(--btn-padding);
+  }
+
+  input {
+    border: 1px solid var(--border-color);
+    background: var(--primary-bg-color);
+    color: var(--text-color);
+    border-radius: 4px;
+  }
+}
