--- a/src/Pages/Employees/Employees.scss
+++ b/src/Pages/Employees/Employees.scss
@@ -22,21 +22,48 @@
 
 
 .toolbar {
-  width: 60%;
+  width: 100%;
+  height: 45px;
   display: flex;
   gap: 25px;
   margin-bottom: 25px;
+  justify-content: space-between;
 
-  .search-bar {
+  .left{
+    display: flex;
     width: 50%;
     gap: 25px;
+  }
+  .right{
     display: flex;
+    width: 50%;
+    gap: 25px;
+  }
+  .search-bar {
+    display: flex;
+    width: 60%;
   }
 
   .filter {
-    gap: 25px;
+    width: 40%;
     display: flex;
-    width: 50%;
+    gap: 25px;
+  }
+  .alert{
+    display: flex;
+    text-align: right;
+    background: var(--primary-bg-color);
+    border: 1px solid var(--border-color);
+    padding: 10px;
+    border-radius: 4px;
+    margin-left: auto;
+  }
+  i {
+    color: var(--warning-color);
+  }
+  a {
+    text-decoration: none;
+    color: var(--text-color);
   }
 
   select {
