--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ body {
     font-size: var(--btn-font-size);
     border-radius: var(--btn-border-radius);
     transition: ease var(--transition-duration);
-    margin: 10px;
+    margin: 0 10px 0px 0;
 }
 
 .btn {
