--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -199,9 +199,15 @@
 
 }
 
-.list-shift thead th,
+.list-shift thead th {
+
+  padding: 10px;
+  text-align: left;
+  vertical-align: middle;
+}
+
 .list-shift tbody td {
-  border-bottom: 1px solid #27272A;
+  border-top: 1px solid #27272A;
   padding: 10px;
   text-align: left;
   vertical-align: middle;
