first integration FE to BE hehe, current shift data + higlight function

--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -1,3 +1,19 @@
+.presence-col.absent-highlight {
+    color: orange;
+}
+
+.presence-col.alpha-highlight {
+    color: red;
+}
+
+.presence-col.present-highlight {
+    color: #02f242;
+}
+
+.presence-col.awaiting-highlight {
+    color: grey;
+}
+
 .switches-container {
   width: 16rem;
   position: relative;
