--- a/src/Pages/Shipment/Shipment.scss
+++ b/src/Pages/Shipment/Shipment.scss
@@ -1,90 +1,95 @@
 .main {
-  width: 100%;
+	width: 100%;
 }
 
 .list-employees table {
-  width: 100%;
-  border-collapse: collapse;
-  overflow: hidden;
-  scrollbar-width: none;
-
+	width: 100%;
+	border-collapse: collapse;
+	overflow: hidden;
+	scrollbar-width: none;
 }
 
 .list-employees thead th,
 .list-employees tbody td {
-  border-bottom: 1px solid var(--border-color);
-  padding: 10px;
-  text-align: left;
-  vertical-align: middle;
+	border-bottom: 1px solid var(--border-color);
+	padding: 10px;
+	text-align: left;
+	vertical-align: middle;
 }
 
 .list-employees thead th {
-  color: var(--text-color);
+	color: var(--text-color);
 }
 
-
 .toolbar {
-  width: 100%;
-  height: 45px;
-  display: flex;
-  gap: 25px;
-  margin-bottom: 25px;
-  justify-content: space-between;
+	width: 100%;
+	height: 45px;
+	display: flex;
+	gap: 25px;
+	margin-bottom: 25px;
+	justify-content: space-between;
 
-  .left {
-    display: flex;
-    width: 50%;
-    gap: 25px;
-  }
+	.left {
+		display: flex;
+		width: 50%;
+		gap: 25px;
+	}
 
-  .right {
-    display: flex;
-    width: 50%;
-    gap: 25px;
-  }
+	.right {
+		display: flex;
+		width: 50%;
+		gap: 25px;
+	}
 
-  .search-bar {
-    display: flex;
-    width: 60%;
-  }
+	.search-bar {
+		display: flex;
+		width: 60%;
+	}
 
-  .filter {
-    width: 40%;
-    display: flex;
-    gap: 25px;
-  }
+	.filter {
+		width: 40%;
+		display: flex;
+		gap: 25px;
+	}
 
-  .alert {
-    display: flex;
-    text-align: right;
-    background: var(--primary-bg-color);
-    border: 1px solid var(--border-color);
-    padding: 10px;
-    border-radius: 4px;
-    margin-left: auto;
-  }
+	.alert {
+		display: flex;
+		text-align: right;
+		background: var(--primary-bg-color);
+		border: 1px solid var(--border-color);
+		padding: 10px;
+		border-radius: 4px;
+		margin-left: auto;
+	}
 
-  i {
-    color: var(--warning-color);
-  }
+	i {
+		color: var(--warning-color);
+	}
 
-  a {
-    text-decoration: none;
-    color: var(--text-color);
-  }
+	a {
+		text-decoration: none;
+		color: var(--text-color);
+	}
 
-  select {
-    background: var(--primary-bg-color);
-    border: 1px solid var(--border-color);
-    border-radius: 4px;
-    color: var(--text-color);
-    padding: var(--btn-padding);
-  }
+	select {
+		background: var(--primary-bg-color);
+		border: 1px solid var(--border-color);
+		border-radius: 4px;
+		color: var(--text-color);
+		padding: var(--btn-padding);
+	}
 
-  input {
-    border: 1px solid var(--border-color);
-    background: var(--primary-bg-color);
-    color: var(--text-color);
-    border-radius: 4px;
-  }
+	input {
+		border: 1px solid var(--border-color);
+		background: var(--primary-bg-color);
+		color: var(--text-color);
+		border-radius: 4px;
+	}
+}
+
+.date-picker {
+	padding: 8px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	width: 200px;
 }
