--- a/src/Pages/Attendance/Attendance.scss
+++ b/src/Pages/Attendance/Attendance.scss
@@ -2,7 +2,7 @@
   position: absolute;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(9px);
-  color: #777;
+  color: #fff;
   padding: 15px;
   border-radius: 5px;
   border: 1px solid var(--border-color);
