--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -1,3 +1,20 @@
+.password-input-container {
+    position: relative;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+
 body, html {
     background-color: #09090b;
 }
